CHManager: dashboard: Attach the Real Time Data Preview to Dashbord
Add DockWidget initialization and add toggleViewaction used to show or
close these dock widget.

Signed-off-by: Wen He <wen.he@ongoingcre.com>

--- a/CHManager/CHManager_resouce.qrc
+++ b/CHManager/CHManager_resouce.qrc
@@ -58,6 +58,8 @@
         <file>resource/lock_32px.png</file>
         <file>resource/padlock_32px.png</file>
         <file>resource/timesheet_32px.png</file>
+        <file>resource/frame_rate_50px.png</file>
+        <file>resource/realdata_30px.png</file>
     </qresource>
     <qresource prefix="/languages">
         <file>CHManager_en_US.qm</file>
